PYME/Acquire/Hardware/CanonEOS/eossdk.py


kEdsEvfZoom_Fit = 1 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1016

kEdsEvfZoom_x5 = 5 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1016

kEdsEvfZoom_x10 = 10 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1016

EdsEvfZoom = enum_anon_273 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1016

enum_anon_274 = c_int # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1026

Evf_AFMode_Quick = 0 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1026

Evf_AFMode_Live = 1 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1026

Evf_AFMode_LiveFace = 2 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1026

EdsEvfAFMode = enum_anon_274 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1026

enum_anon_275 = c_int # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

kEdsStroboModeInternal = 0 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

kEdsStroboModeExternalETTL = 1 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

kEdsStroboModeExternalATTL = 2 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

kEdsStroboModeExternalTTL = 3 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

kEdsStroboModeExternalAuto = 4 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

kEdsStroboModeExternalManual = 5 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

kEdsStroboModeManual = 6 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

EdsStroboMode = enum_anon_275 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1040

enum_anon_276 = c_int # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1049

kEdsETTL2ModeEvaluative = 0 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1049

kEdsETTL2ModeAverage = 1 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1049

EdsETTL2Mode = enum_anon_276 # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1049

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1062
class struct_tagEdsPoint(Structure):
    pass

struct_tagEdsPoint.__slots__ = [
    'x',
    'y',
]
struct_tagEdsPoint._fields_ = [
    ('x', EdsInt32),
    ('y', EdsInt32),
]

EdsPoint = struct_tagEdsPoint # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1062

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1072
class struct_tagEdsSize(Structure):
    pass

struct_tagEdsSize.__slots__ = [
    'width',
    'height',
]
struct_tagEdsSize._fields_ = [
    ('width', EdsInt32),
    ('height', EdsInt32),
]

EdsSize = struct_tagEdsSize # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1072

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1082
class struct_tagEdsRect(Structure):
    pass

struct_tagEdsRect.__slots__ = [
    'point',
    'size',
]
struct_tagEdsRect._fields_ = [
    ('point', EdsPoint),
    ('size', EdsSize),
]

EdsRect = struct_tagEdsRect # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1082

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1091
class struct_tagEdsRational(Structure):
    pass

struct_tagEdsRational.__slots__ = [
    'numerator',
    'denominator',
]
struct_tagEdsRational._fields_ = [
    ('numerator', EdsInt32),
    ('denominator', EdsUInt32),
]

EdsRational = struct_tagEdsRational # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1091

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1106
class struct_tagEdsTime(Structure):
    pass

struct_tagEdsTime.__slots__ = [
    'year',
    'month',
    'day',
    'hour',
    'minute',
    'second',
    'milliseconds',
]
struct_tagEdsTime._fields_ = [
    ('year', EdsUInt32),
    ('month', EdsUInt32),
    ('day', EdsUInt32),
    ('hour', EdsUInt32),
    ('minute', EdsUInt32),
    ('second', EdsUInt32),
    ('milliseconds', EdsUInt32),
]

EdsTime = struct_tagEdsTime # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1106

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1117
class struct_tagEdsDeviceInfo(Structure):
    pass

struct_tagEdsDeviceInfo.__slots__ = [
    'szPortName',
    'szDeviceDescription',
    'deviceSubType',
    'reserved',
]
struct_tagEdsDeviceInfo._fields_ = [
    ('szPortName', EdsChar * 256),
    ('szDeviceDescription', EdsChar * 256),
    ('deviceSubType', EdsUInt32),
    ('reserved', EdsUInt32),
]

EdsDeviceInfo = struct_tagEdsDeviceInfo # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1117

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1130
class struct_tagEdsVolumeInfo(Structure):
    pass

struct_tagEdsVolumeInfo.__slots__ = [
    'storageType',
    'access',
    'maxCapacity',
    'freeSpaceInBytes',
    'szVolumeLabel',
]
struct_tagEdsVolumeInfo._fields_ = [
    ('storageType', EdsUInt32),
    ('access', EdsAccess),
    ('maxCapacity', EdsUInt64),
    ('freeSpaceInBytes', EdsUInt64),
    ('szVolumeLabel', EdsChar * 256),
]

EdsVolumeInfo = struct_tagEdsVolumeInfo # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1130

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1145
class struct_tagEdsDirectoryItemInfo(Structure):
    pass

struct_tagEdsDirectoryItemInfo.__slots__ = [
    'size',
    'isFolder',
    'groupID',
    'option',
    'szFileName',
    'format',
]
struct_tagEdsDirectoryItemInfo._fields_ = [
    ('size', EdsUInt32),
    ('isFolder', EdsBool),
    ('groupID', EdsUInt32),
    ('option', EdsUInt32),
    ('szFileName', EdsChar * 256),
    ('format', EdsUInt32),
]

EdsDirectoryItemInfo = struct_tagEdsDirectoryItemInfo # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1145

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1160
class struct_tagEdsImageInfo(Structure):
    pass

struct_tagEdsImageInfo.__slots__ = [
    'width',
    'height',
    'numOfComponents',
    'componentDepth',
    'effectiveRect',
    'reserved1',
    'reserved2',
]
struct_tagEdsImageInfo._fields_ = [
    ('width', EdsUInt32),
    ('height', EdsUInt32),
    ('numOfComponents', EdsUInt32),
    ('componentDepth', EdsUInt32),
    ('effectiveRect', EdsRect),
    ('reserved1', EdsUInt32),
    ('reserved2', EdsUInt32),
]

EdsImageInfo = struct_tagEdsImageInfo # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1160

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1171
class struct_tagEdsSaveImageSetting(Structure):
    pass

struct_tagEdsSaveImageSetting.__slots__ = [
    'JPEGQuality',
    'iccProfileStream',
    'reserved',
]
struct_tagEdsSaveImageSetting._fields_ = [
    ('JPEGQuality', EdsUInt32),
    ('iccProfileStream', EdsStreamRef),
    ('reserved', EdsUInt32),
]

EdsSaveImageSetting = struct_tagEdsSaveImageSetting # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1171

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1183
class struct_tagEdsPropertyDesc(Structure):
    pass

struct_tagEdsPropertyDesc.__slots__ = [
    'form',
    'access',
    'numElements',
    'propDesc',
]
struct_tagEdsPropertyDesc._fields_ = [
    ('form', EdsInt32),
    ('access', EdsInt32),
    ('numElements', EdsInt32),
    ('propDesc', EdsInt32 * 128),
]

EdsPropertyDesc = struct_tagEdsPropertyDesc # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1183

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1197
class struct_tagEdsPictureStyleDesc(Structure):
    pass

struct_tagEdsPictureStyleDesc.__slots__ = [
    'contrast',
    'sharpness',
    'saturation',
    'colorTone',
    'filterEffect',
    'toningEffect',
]
struct_tagEdsPictureStyleDesc._fields_ = [
    ('contrast', EdsInt32),
    ('sharpness', EdsUInt32),
    ('saturation', EdsInt32),
    ('colorTone', EdsInt32),
    ('filterEffect', EdsUInt32),
    ('toningEffect', EdsUInt32),
]

EdsPictureStyleDesc = struct_tagEdsPictureStyleDesc # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1197

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1210
class struct_tagEdsFrameDesc(Structure):
    pass

struct_tagEdsFrameDesc.__slots__ = [
    'valid',
    'selected',
    'justFocus',
    'rect',
    'reserved',
]
struct_tagEdsFrameDesc._fields_ = [
    ('valid', EdsUInt32),
    ('selected', EdsUInt32),
    ('justFocus', EdsUInt32),
    ('rect', EdsRect),
    ('reserved', EdsUInt32),
]

EdsFocusPoint = struct_tagEdsFrameDesc # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1210

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1219
class struct_tagEdsFocusInfo(Structure):
    pass

struct_tagEdsFocusInfo.__slots__ = [
    'imageRect',
    'pointNumber',
    'focusPoint',
    'executeMode',
]
struct_tagEdsFocusInfo._fields_ = [
    ('imageRect', EdsRect),
    ('pointNumber', EdsUInt32),
    ('focusPoint', EdsFocusPoint * 128),
    ('executeMode', EdsUInt32),
]

EdsFocusInfo = struct_tagEdsFocusInfo # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1219

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1231
class struct_tagEdsUsersetData(Structure):
    pass

struct_tagEdsUsersetData.__slots__ = [
    'valid',
    'dataSize',
    'szCaption',
    'data',
]
struct_tagEdsUsersetData._fields_ = [
    ('valid', EdsUInt32),
    ('dataSize', EdsUInt32),
    ('szCaption', EdsChar * 32),
    ('data', EdsUInt8 * 1),
]

EdsUsersetData = struct_tagEdsUsersetData # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1231

# C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1242
class struct_tagEdsCapacity(Structure):
    pass

struct_tagEdsCapacity.__slots__ = [
    'numberOfFreeClusters',
    'bytesPerSector',
    'reset',
]
struct_tagEdsCapacity._fields_ = [
    ('numberOfFreeClusters', EdsInt32),
    ('bytesPerSector', EdsInt32),
    ('reset', EdsBool),
]

EdsCapacity = struct_tagEdsCapacity # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1242

EdsProgressCallback = CFUNCTYPE(UNCHECKED(EdsError), EdsUInt32, POINTER(EdsVoid), POINTER(EdsBool)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1251

EdsCameraAddedHandler = CFUNCTYPE(UNCHECKED(EdsError), POINTER(EdsVoid)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1259

EdsPropertyEventHandler = CFUNCTYPE(UNCHECKED(EdsError), EdsPropertyEvent, EdsPropertyID, EdsUInt32, POINTER(EdsVoid)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1265

EdsObjectEventHandler = CFUNCTYPE(UNCHECKED(EdsError), EdsObjectEvent, EdsBaseRef, POINTER(EdsVoid)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1274

EdsStateEventHandler = CFUNCTYPE(UNCHECKED(EdsError), EdsStateEvent, EdsUInt32, POINTER(EdsVoid)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1282

EdsReadStream = CFUNCTYPE(UNCHECKED(EdsError), POINTER(None), EdsUInt32, POINTER(EdsVoid), POINTER(EdsUInt32)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1289

EdsWriteStream = CFUNCTYPE(UNCHECKED(EdsError), POINTER(None), EdsUInt32, POINTER(EdsVoid), POINTER(EdsUInt32)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1290

EdsSeekStream = CFUNCTYPE(UNCHECKED(EdsError), POINTER(None), EdsInt32, EdsSeekOrigin) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1291

EdsTellStream = CFUNCTYPE(UNCHECKED(EdsError), POINTER(None), POINTER(EdsInt32)) # C:\\PYME\\PYME\\Acquire\\Hardware\\CanonEOS\\/EDSDKTypes.h: 1292
